<resources>
    <string name="app_name">Credo</string>
    <string name="coworking_center">Coworking center</string>
    <string name="Create_account">Don\'t have an account?</string>
    <string name="Login">Sign in</string>
    <string name="forgotPassword">Forgot the password?</string>
    <string name="Successful_registration">Successful registration</string>
    <string name="Registration_error">Registration error</string>
    <string name="Not_fields_filled">Not all fields are filled</string>
    <string name="Data_updated_successfully">Data updated successfully</string>
    <string name="Data_update_error">Data update error</string>
    <string name="MinLenPassword">Minimum password length - 8 characters</string>
    <string name="User_already_registered">User already registered</string>
    <string name="There_is_no_such_account">There is no such account</string>
    <string name="Remember_me">Remember me</string>
    <string name="Password">Password</string>
    <string name="Login_to_your_Account">Login to your\nAccount</string>
    <string name="or_continue_with">"   or continue with   "</string>
    <string name="Create_your_Account">Create your\nAccount</string>
    <string name="Sign_up">Sign up</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="profile">Profile</string>
    <string name="table_tennis">Table tennis</string>
    <string name="wrong_password">Wrong password</string>
    <string name="darts">Darts</string>
    <string name="workspace">Workspace</string>
    <string name="printer">Printer</string>
    <string name="board_game">Board game</string>
    <string name="conference_hall">Conference hall</string>
    <string name="book">Book</string>
    <string name="tennis_info">Table tennis or ping-pong is a fairly common sport and leisure activity. It allows you to maintain good physical shape and at the same time does not require special training.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact us</string>
    <string name="notifications">Notifications</string>
    <string name="security">Security</string>
    <string name="cancel">Cancel</string>
    <string name="yes_logout">Yes, logout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="patronymic">Patronymic</string>
    <string name="update">Update</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit_profile_2">Edit Profile</string>
    <string name="services">Services</string>
    <string name="events">Events</string>
    <string name="or_continue_with_reg">"   or continue with   "</string>

</resources>